plex/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: plex
  name: plex
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: plex
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: plex
    spec:
      hostNetwork: true
      containers:
      - image: jaymoulin/plex:1.15.0-aarch64
        name: plex
        ports:
        - containerPort: 32400
        - containerPort: 3005
        - containerPort: 8324
        - containerPort: 32469
        - containerPort: 1900
          protocol: UDP
        - containerPort: 32410
          protocol: UDP
        - containerPort: 32412
          protocol: UDP
        - containerPort: 32413
          protocol: UDP
        - containerPort: 32414
          protocol: UDP
        resources: {}
        volumeMounts:
        - mountPath: /media/series
          name: mediaseries
        - mountPath: /media/films
          name: mediafilms
        - mountPath: /media/documentaries
          name: mediadocs
        - mountPath: /root/Library
          name: library
      restartPolicy: Always
      volumes:
      - name: mediaseries
        nfs:
          server: 192.168.178.33
          path: "/volume1/Series/"
      - name: mediafilms
        nfs:
          server: 192.168.178.33
          path: "/volume2/film2/"
      - name: library
        nfs:
          server: 192.168.178.33
          path: "/volume1/plexconfig/"
      - name: mediadocs
        nfs:
          server: 192.168.178.33
          path: "/volume1/documentaries/"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: NotIn
                  values:
                  - 'ubuntu'
status: {}
